--- a/client/css/style2.css
+++ b/client/css/style2.css
@@ -18,3 +18,41 @@ input {
     font-family: Arial, Helvetica, sans-serif ,serif;
     color: yellow;
 }
+@media screen and (max-width: 870px) {
+    #timer {
+        margin-left: 20px;
+    }
+    #timer * {
+        font-size: 40px;
+    }
+    .number {
+        margin-right: 10px;
+    }
+}
+@media screen and (max-width: 750px) {
+    #timer {
+        margin-top: 100px;
+    }
+
+}
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 470px) {
+    #timer * {
+        font-size: 25px;
+    }
+    #timer {
+        margin-top: 50px;
+    }
+}
+@media screen and (max-width: 400px) {
+    h1 {
+        font-size: 15px;
+    }
+    #timer {
+        margin-top: 30px;
+    }
+}
