--- a/client/css/App.css
+++ b/client/css/App.css
@@ -126,6 +126,7 @@ button {
      }
 }
 p {
+    font-size: white;
     font-size: 20px;
     font-weight: bold;
     font-family: Verdana, sans-serif;
